--- a/manifest.json
+++ b/manifest.json
@@ -6,9 +6,9 @@
         "en": "Web-based interface for system administration for Unix.",
         "fr": "Interface Web d'administration système pour Unix."
     },
-    "version": "1.941~ynh1",
+    "version": "1.955~ynh1",
     "url": "http://www.webmin.com",
-    "license": "free",
+    "license": "BSD 3-Clause",
     "maintainer": {
         "name": "Anmol Sharma",
         "email": "anmol@datamol.org"
