--- a/tests.toml
+++ b/tests.toml
@@ -6,4 +6,5 @@ test_format = 1.0
     # Commits to test upgrade from
     # -------------------------------
 
-    test_upgrade_from.99875e2b4c69f9ef22b05f565eeab52a8befb566.name = "Upgrade from 1.979~ynh2"
+    # test_upgrade_from.99875e2b4c69f9ef22b05f565eeab52a8befb566.name = "Upgrade from 1.979~ynh2"
+    test_upgrade_from.ff592aa79825e9861f17291c4e678dcc3a37ae50.name = "Upgrade from 2.202~ynh1"
